fix: add required permissions for security scanning workflows

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,11 +7,19 @@ on:
     branches: [ main, develop ]
   workflow_dispatch:
 
+# Default permissions for all jobs
+permissions:
+  contents: read
+
 jobs:
   security-scan:
     name: Security Scan
     runs-on: ubuntu-latest
     if: github.repository == 'brunel-opensim/homepot-client'
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     steps:
     - uses: actions/checkout@v4
       with:
