--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ dev = [
     "isort>=5.12.0",
     "flake8>=6.1.0",
     "flake8-docstrings>=1.7.0",
-    "flake8-security>=1.7.1",
+    "flake8-bandit>=4.1.1",
     "mypy>=1.7.0",
     "bandit[toml]>=1.7.5",
     "safety>=2.3.0",
