--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Check Advanced Security availability
       if: github.repository_owner != 'brunel-opensim'
       run: |
-        echo "ℹ️  GitHub Advanced Security is not enabled for this repository."
+        echo "GitHub Advanced Security is not enabled for this repository."
         echo "   SARIF upload will be skipped. Security scan results are still available in job logs."
         echo "   To enable code scanning, contact your GitHub organization admin."
 
