--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ docs = [
     "sphinx-rtd-theme>=1.3.0",
     "sphinx-autodoc-typehints>=1.25.0",
     "myst-parser>=2.0.0",
+    "linkify-it-py>=2.0.0",
     "sphinx-copybutton>=0.5.2",
     "sphinx-autobuild>=2021.3.14",
 ]
