--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,19 +8,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.9"
-  jobs:
-    post_create_environment:
-      # Install poetry for dependency management
-      - pip install poetry
-    post_install:
-      # Install dependencies
-      - poetry config virtualenvs.create false
-      - poetry install --with docs
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
-  fail_on_warning: true
+  fail_on_warning: false
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats:
