--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+# Set permissions for GITHUB_TOKEN
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-docs:
     runs-on: ubuntu-latest
@@ -47,28 +53,27 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.repository == 'brunel-opensim/homepot-client'
     
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+      contents: read    # to read the repository contents
+    
     steps:
-    - uses: actions/checkout@v4
+    - name: Download documentation artifacts
+      uses: actions/download-artifact@v4
       with:
-        fetch-depth: 0  # Fetch all history for proper versioning
-        
-    - name: Set up Python
-      uses: actions/setup-python@v4
+        name: documentation
+        path: ./docs-build
+    
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+      
+    - name: Upload to GitHub Pages
+      uses: actions/upload-pages-artifact@v3
       with:
-        python-version: '3.9'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[docs]"
-        
-    - name: Build documentation
-      run: |
-        cd docs
-        make html
+        path: ./docs-build
         
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
+      id: deployment
+      uses: actions/deploy-pages@v4
