--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
 # Example environment configuration for HOMEPOT Client
 # Copy this file to .env and modify as needed
 
+# Docker Configuration
+HOMEPOT_ENV=production
+# Options: production, development, testing
+HOMEPOT_DEBUG=false
+HOMEPOT_PORT=8000
+HOMEPOT_DATA_DIR=./data
+HOMEPOT_LOGS_DIR=./logs
+COMPOSE_PROJECT_NAME=homepot-client
+
 # Application Configuration
 HOMEPOT_CLIENT_HOST=localhost
 HOMEPOT_CLIENT_PORT=8080
