simplify: remove docker-compose.override.yml complexity

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ HOMEPOT_DATA_DIR=./data
 HOMEPOT_LOGS_DIR=./logs
 COMPOSE_PROJECT_NAME=homepot-client
 
+# Development Mode Source Mounting
+# HOMEPOT_SOURCE_MOUNT=./src
+# Uncomment above line for development mode with hot reload
+
 # Application Configuration
 HOMEPOT_CLIENT_HOST=localhost
 HOMEPOT_CLIENT_PORT=8080
