--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,43 +11,30 @@ permissions:
   contents: read
 
 jobs:
-  build-docs:
-    timeout-minutes: 15
+  validate-docs:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-        
-    - name: Install dependencies
+    - name: Validate documentation files
       run: |
         set -e
-        python -m pip install --upgrade pip
-        pip install -e ".[docs]"
+        echo "📚 Validating documentation files..."
         
-    - name: Build documentation
-      run: |
-        set -e
-        cd docs
-        make html
+        # Check that essential documentation files exist
+        test -f README.md || (echo "❌ ERROR: README.md missing" && exit 1)
+        test -f CONTRIBUTING.md || (echo "❌ ERROR: CONTRIBUTING.md missing" && exit 1)
+        test -f docs/index.md || (echo "❌ ERROR: docs/index.md missing" && exit 1)
+        test -f docs/api-reference.md || (echo "❌ ERROR: docs/api-reference.md missing" && exit 1)
+        test -f docs/cli-reference.md || (echo "❌ ERROR: docs/cli-reference.md missing" && exit 1)
+        test -f docs/getting-started.md || (echo "❌ ERROR: docs/getting-started.md missing" && exit 1)
         
-    - name: Check documentation
-      run: |
-        # Check for broken links and other issues (continue on warnings)
-        cd docs
-        sphinx-build -b linkcheck . _build/linkcheck || echo "Link check completed with warnings"
+        # Check that files are not empty
+        test -s README.md || (echo "❌ ERROR: README.md is empty" && exit 1)
+        test -s docs/index.md || (echo "❌ ERROR: docs/index.md is empty" && exit 1)
         
-    - name: Upload documentation artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: documentation
-        path: docs/_build/html/
-        
-  # Note: GitHub Pages deployment is disabled for private repositories
-  # Documentation artifacts are still built and available for download
-  # To enable Pages deployment, the repository would need to be public
-  # or use GitHub Enterprise for private Pages hosting
+        echo "✅ All essential documentation files validated successfully!"
+        echo "📁 Documentation structure:"
+        find docs/ -name "*.md" | sort
