--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,8 +116,9 @@ jobs:
       run: |
         # Check that essential documentation files exist
         test -f README.md || (echo "ERROR: README.md missing" && exit 1)
+        test -f CONTRIBUTING.md || (echo "ERROR: CONTRIBUTING.md missing" && exit 1)
         test -f docs/index.md || (echo "ERROR: docs/index.md missing" && exit 1)
-        test -f docs/api-reference.md || (echo "ERROR: docs/api-reference.md missing" && exit 1)
+        test -f docs/getting-started.md || (echo "ERROR: docs/getting-started.md missing" && exit 1)
         echo "Documentation files validated"
 
   test:
