--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
 # Development dependencies for HOMEPOT Client
 # Use: pip install -r requirements.txt
 
+# Core FastAPI and Database
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+sqlalchemy>=2.0.0
+aiosqlite>=0.19.0
+alembic>=1.12.0
+
+# Authentication and Security
+passlib[argon2]>=1.7.4
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.6
+
+# Background Tasks and Queues
+celery>=5.3.0
+redis>=5.0.0
+
+# Real-time Communication
+websockets>=12.0
+
+# Utilities
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+python-dotenv>=1.0.0
+
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
