--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -78,10 +78,49 @@ jobs:
           trivy-results.sarif
         retention-days: 30
 
+  pos-dummy:
+    name: POSDummy Integration Gate
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    if: github.repository == 'brunel-opensim/homepot-client'
+    needs: [security-scan]
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install minimal dependencies
+      run: |
+        set -e
+        python -m pip install --upgrade pip
+        pip install --no-cache-dir -r requirements.txt
+        pip install -e .
+
+    - name: Run POSDummy Integration Test
+      run: |
+        set -e
+        echo "Running POSDummy Integration Gate..."
+        ./scripts/run-pos-dummy.sh --verbose
+        echo "POSDummy gate passed - HOMEPOT infrastructure verified!"
+
+    - name: Upload POSDummy test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: pos-dummy-results
+        path: |
+          pytest-results.xml
+          pos-dummy-report.txt
+        retention-days: 7
+
   code-quality:
     name: Code Quality
     runs-on: ubuntu-latest
     if: github.repository == 'brunel-opensim/homepot-client'
+    needs: [pos-dummy]
     strategy:
       matrix:
         python-version: ['3.9', '3.11']
@@ -126,6 +165,7 @@ jobs:
     name: Test Suite
     runs-on: ${{ matrix.os }}
     if: github.repository == 'brunel-opensim/homepot-client'
+    needs: [pos-dummy]
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
