--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,18 +118,18 @@ known_third_party = ["fastapi", "pydantic", "pytest"]
 # MyPy configuration
 [tool.mypy]
 python_version = "3.9"
-warn_return_any = true
+warn_return_any = false
 warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
 check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
+disallow_untyped_decorators = false
+no_implicit_optional = false
 warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
+warn_unused_ignores = false
+warn_no_return = false
 warn_unreachable = true
-strict_equality = true
+strict_equality = false
 
 [[tool.mypy.overrides]]
 module = "tests.*"
