fix: Add missing 'api' pytest marker to resolve test collection errors
- Complete pytest marker configuration for all test types
- Resolves final unit test collection failure in CI/CD pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,6 +159,7 @@ markers = [
     "security: marks tests as security tests",
     "performance: marks tests as performance tests",
     "live: marks tests that require live services",
+    "api: marks tests for API functionality",
 ]
 asyncio_mode = "auto"
 
