--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pytest-cov>=4.1.0
 pytest-mock>=3.12.0
 factory-boy>=3.3.0
 faker>=20.1.0
+greenlet>=2.0.0  # Required for async testing
 
 # Code quality
 black>=23.0.0
