Fix: Windows compatibility for database tests and CI
Primary Issue: Windows file locking with SQLite cleanup
- PermissionError: [WinError 32] process cannot access file in use

Solutions Implemented:
- Enhanced database fixture cleanup with proper engine disposal
- Windows-specific retry logic for file deletion (3 attempts)
- Platform-aware delay handling for file handle release
- Graceful cleanup warnings instead of test failures

Technical Improvements:
- Updated temp_db fixtures in test_database.py and test_pos_dummy.py
- Added comprehensive Windows-safe database utilities in test_utils.py
- Enhanced pytest configuration with Windows-specific warning filters
- Modified CI workflow with Windows-specific pytest arguments

Expected Results:
- Tests still run and pass (42 passed, 51 skipped)
- Cleanup errors become warnings instead of failures
- Better Windows platform support in CI/CD pipeline
- Maintained cross-platform compatibility

Impact: Resolves Windows CI failures while preserving test functionality

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -187,7 +187,20 @@ jobs:
         pip install -e .
 
     - name: Run unit tests
-      run: pytest tests/ -v --cov=homepot_client --cov-report=xml
+      shell: bash
+      run: |
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+          # Windows-specific pytest configuration for better file handling
+          pytest tests/ -v --cov=homepot_client --cov-report=xml \
+            --tb=short \
+            --durations=10 \
+            -W ignore::UserWarning:homepot_client \
+            -W ignore:".*Database cleanup.*":UserWarning \
+            -W ignore:".*Could not cleanup temp database.*":UserWarning
+        else
+          # Standard pytest configuration for Unix systems
+          pytest tests/ -v --cov=homepot_client --cov-report=xml
+        fi
 
     - name: Upload coverage reports
       uses: codecov/codecov-action@v4
