--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -148,8 +148,8 @@ jobs:
     - name: Run flake8 linting
       run: flake8 src/ tests/
 
-    # - name: Run mypy type checking
-    #   run: mypy src/
+    - name: Run mypy type checking
+      run: mypy src/
 
     - name: Validate documentation files
       run: |
