--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "pydantic>=2.5.0",
+    "pydantic-settings>=2.1.0",
     "httpx>=0.25.0",
     "aiohttp>=3.9.0",
     "asyncio-mqtt>=0.16.0",
@@ -44,6 +45,17 @@ dependencies = [
     "typer>=0.9.0",
     "pyyaml>=6.0.1",
     "python-dotenv>=1.0.0",
+    # Database dependencies
+    "sqlalchemy>=2.0.0",
+    "aiosqlite>=0.19.0",
+    "alembic>=1.12.0",
+    # Background tasks
+    "celery>=5.3.0",
+    "redis>=5.0.0",
+    # Real-time communication
+    "websockets>=12.0",
+    # Testing runtime dependency for factories
+    "greenlet>=2.0.0",
 ]
 
 [project.optional-dependencies]
