--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -143,19 +143,19 @@ jobs:
               latest_minor=$(echo "$latest" | cut -d. -f2)
               
               if [ "$current_major" != "$latest_major" ]; then
-                risk="🔴 HIGH"
+                risk="HIGH"
                 strategy="Research breaking changes first"
               elif [ "$current_minor" != "$latest_minor" ]; then
                 minor_gap=$((latest_minor - current_minor))
                 if [ "$minor_gap" -gt 2 ]; then
-                  risk="🟡 MEDIUM-HIGH"
+                  risk="MEDIUM-HIGH"
                   strategy="Staged upgrade recommended"
                 else
-                  risk="🟡 MEDIUM"
+                  risk="MEDIUM"
                   strategy="Test in development"
                 fi
               else
-                risk="🟢 LOW"
+                risk="LOW"
                 strategy="Safe to upgrade"
               fi
               
@@ -186,10 +186,10 @@ jobs:
         
         echo "" >> dependency-report.md
         echo "**Risk Assessment:**" >> dependency-report.md
-        echo "- 🟢 **LOW**: Patch versions (safe updates)" >> dependency-report.md
-        echo "- 🟡 **MEDIUM**: Minor versions (test required)" >> dependency-report.md
-        echo "- 🟡 **MEDIUM-HIGH**: Multiple minor jumps (staged approach)" >> dependency-report.md
-        echo "- 🔴 **HIGH**: Major versions (breaking changes likely)" >> dependency-report.md
+        echo "- **LOW**: Patch versions (safe updates)" >> dependency-report.md
+        echo "- **MEDIUM**: Minor versions (test required)" >> dependency-report.md
+        echo "- **MEDIUM-HIGH**: Multiple minor jumps (staged approach)" >> dependency-report.md
+        echo "- **HIGH**: Major versions (breaking changes likely)" >> dependency-report.md
 
     - name: Check dependency constraints
       if: steps.outdated.outputs.has_outdated == 'true'
