--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,11 @@ pydantic>=2.5.0
 pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 
+# Push Notifications
+aiohttp>=3.9.0  # For HTTP requests in push notifications
+google-auth>=2.23.0  # For Google Cloud authentication
+google-auth-oauthlib>=1.1.0  # For OAuth2 flows
+
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
