--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,10 @@ myst-parser>=2.0.0
 ipython>=8.17.0
 jupyter>=1.0.0
 httpx>=0.25.0  # for testing HTTP clients
+
+
+passlib[bcrypt]==1.7.4
+# python-jose==3.5.0
+requests==2.32.4
+pydantic[email]==2.11.7
+psycopg2-binary 
