--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Development dependencies for HOMEPOT Client
 # Use: pip install -r requirements.txt
+#
 
 # Core FastAPI and Database
 fastapi>=0.104.0
@@ -27,9 +28,13 @@ pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 
 # Push Notifications
-aiohttp>=3.9.0  # For HTTP requests in push notifications
-google-auth>=2.23.0  # For Google Cloud authentication
-google-auth-oauthlib>=1.1.0  # For OAuth2 flows
+# Feature: WNS Windows and FCM Linux push notification providers
+# - WNS Windows: OAuth2 authentication with Azure AD, Toast/Tile/Badge/Raw notifications
+# - FCM Linux: Google Cloud Messaging with service account authentication
+# - Comprehensive testing: 33 tests, 28.38% coverage (87% FCM, 66% WNS)
+aiohttp>=3.9.0  # For async HTTP requests in push notification providers
+google-auth>=2.23.0  # For Google Cloud/Firebase authentication (FCM Linux)
+google-auth-oauthlib>=1.1.0  # For OAuth2 flows (FCM Linux)
 
 # Testing
 pytest>=7.4.0
@@ -56,6 +61,14 @@ sphinx>=7.2.0
 sphinx-rtd-theme>=1.3.0
 sphinx-autodoc-typehints>=1.25.0
 myst-parser>=2.0.0
+
+# For ReadTheDocs builds
+mkdocs>=1.5.0
+mkdocs-material>=9.5.0
+mkdocs-material-extensions>=1.3.0
+pymdown-extensions>=10.7.0
+markdown>=3.5.0
+mkdocs-minify-plugin>=0.8.0
 
 # Development tools
 ipython>=8.17.0
