--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # Development dependencies for HOMEPOT Client
 # Use: pip install -r requirements.txt
-#
 
 # Core FastAPI and Database
 fastapi>=0.104.0
@@ -28,13 +27,10 @@ pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 
 # Push Notifications
-# Feature: WNS Windows and FCM Linux push notification providers
-# - WNS Windows: OAuth2 authentication with Azure AD, Toast/Tile/Badge/Raw notifications
-# - FCM Linux: Google Cloud Messaging with service account authentication
-# - Comprehensive testing: 33 tests, 28.38% coverage (87% FCM, 66% WNS)
 aiohttp>=3.9.0  # For async HTTP requests in push notification providers
 google-auth>=2.23.0  # For Google Cloud/Firebase authentication (FCM Linux)
 google-auth-oauthlib>=1.1.0  # For OAuth2 flows (FCM Linux)
+pyjwt[crypto]>=2.8.0  # For JWT token generation (APNs authentication)
 
 # Testing
 pytest>=7.4.0
@@ -73,8 +69,7 @@ mkdocs-minify-plugin>=0.8.0
 # Development tools
 ipython>=8.17.0
 jupyter>=1.0.0
-httpx>=0.25.0  # for testing HTTP clients
-
+httpx[http2]>=0.25.0  # for testing HTTP clients and APNs HTTP/2 support
 
 passlib[bcrypt]==1.7.4
 # python-jose==3.5.0
