--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ uvicorn[standard]>=0.24.0
 SQLAlchemy==1.4.52
 aiosqlite>=0.19.0
 alembic>=1.12.0
+pydantic[email]
 
 # Authentication and Security
 passlib[argon2]>=1.7.4
