--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@
 # Core FastAPI and Database
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
-sqlalchemy>=2.0.0
+# sqlalchemy>=2.0.0
+SQLAlchemy==1.4.52
 aiosqlite>=0.19.0
 alembic>=1.12.0
 
@@ -60,3 +61,12 @@ myst-parser>=2.0.0
 ipython>=8.17.0
 jupyter>=1.0.0
 httpx>=0.25.0  # for testing HTTP clients
+
+
+passlib[bcrypt]==1.7.4
+# python-jose==3.5.0
+requests==2.32.4
+pydantic[email]==2.11.7
+psycopg2-binary==2.9.9
+types-python-jose
+types-passlib
