--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,8 +113,10 @@ nav:
     - APNs Apple Integration: apns-apple-integration.md
   - Technical Guides:
     - Database Guide: database-guide.md
+    - Database Management: database-management.md
     - Collaboration Guide: collaboration-guide.md
     - GitHub Permissions: github-permissions-guide.md
+    - Repository Health: repository-health.md
   - POS Dummy:
     - Overview: POSDummy.md
     - Integration: POSDummy-Integration.md
