--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
     {name = "HOMEPOT Consortium", email = "contact@homepot-consortium.org"},
 ]
 description = "HOMEPOT Client - Homogenous Cyber Management of End-Points and Operational Technology"
-readme = "../README.md"
+readme = "README.md"
 license = {text = "Apache-2.0"}
 requires-python = ">=3.9"
 classifiers = [
